package entities.baseObject.baseCards;

public class ItemCard {
}
